workloads/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.41.1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8080
              name: http
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:5.0.1-ls251
          resources:
            requests:
              cpu: "2"
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: storage
              mountPath: /storage
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: storage
          persistentVolumeClaim:
            claimName: sabnzbd-storage
