workloads/sabnzbd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
  tls: {}
